Pl Docs Polish - schema table -- solved odd layout issue with table row border

--- a/apps/pattern-lab--workshop/src/styles/_docs.scss
+++ b/apps/pattern-lab--workshop/src/styles/_docs.scss
@@ -209,6 +209,10 @@ pre {
     .required-key {
       color: red;
     }
+    ul {
+      margin: 0;
+      padding: 0;
+    }
   }
 }
 
